ui Fix embed GitHub pages on iOS.

--- a/style/class/urlView.scss
+++ b/style/class/urlView.scss
@@ -2,7 +2,8 @@
 
 .urlView
 {
-  width: 100%;
+  width: 1px;
+  min-width: 100%;
   border: none;
   background: white;
 }
